# splunk-otel-python

./: .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  .pylintrc  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  COPYRIGHT.txt  DEVELOPMENT.md  MIGRATING.md  Makefile  README.md  README.rst  RELEASE_NOTES.md  RELEASING.md  SECURITY.md  VERSION_2_RELEASE_NOTES.md  metadata.yaml  migration.md  mypy.ini  pyproject.toml  pyrightconfig.json  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: changelog.yml  ci-main.yml  ci.yml  cla.yml  test.yml
docker/: Dockerfile  README.md  example-instrumentation.yaml  publish-docker-image.sh  requirements-secureapp.txt  requirements.txt
docs/: README.md  advanced-config.md  advanced-install.md  configuring-propagators.md  design-principles.md  exporting-data.md  instrumentation-special-cases.md  profiling.md  secureapp.md  troubleshooting.md
docs/examples/: secureapp-collector-config.yaml
examples/: splunk_opentelemetry.py  trace_example.py
examples/falcon/: Makefile  main.py  requirements.txt
examples/oteltest/: direct-ingest.py  hello-falcon.py
metadata/: aggregate_yamls.py  ai_metadata_generator.py  splunk-otel-python-metadata.yaml
metadata/generator/: ai_metadata_generator.py  example.yaml
metadata/yamls/: opentelemetry-instrumentation-aio-pika.yaml  opentelemetry-instrumentation-aiohttp-client.yaml  opentelemetry-instrumentation-aiohttp-server.yaml  opentelemetry-instrumentation-aiokafka.yaml  opentelemetry-instrumentation-aiopg.yaml  opentelemetry-instrumentation-asgi.yaml  opentelemetry-instrumentation-asyncclick.yaml  opentelemetry-instrumentation-asyncio.yaml  opentelemetry-instrumentation-asyncpg.yaml  opentelemetry-instrumentation-aws-lambda.yaml  opentelemetry-instrumentation-boto.yaml  opentelemetry-instrumentation-boto3sqs.yaml  opentelemetry-instrumentation-botocore.yaml  opentelemetry-instrumentation-cassandra.yaml  opentelemetry-instrumentation-celery.yaml  opentelemetry-instrumentation-click.yaml  opentelemetry-instrumentation-confluent-kafka.yaml  opentelemetry-instrumentation-dbapi.yaml  opentelemetry-instrumentation-django.yaml  opentelemetry-instrumentation-elasticsearch.yaml  opentelemetry-instrumentation-falcon.yaml  opentelemetry-instrumentation-fastapi.yaml  opentelemetry-instrumentation-flask.yaml  opentelemetry-instrumentation-grpc.yaml  opentelemetry-instrumentation-httpx.yaml  opentelemetry-instrumentation-jinja2.yaml  opentelemetry-instrumentation-kafka-python.yaml  opentelemetry-instrumentation-logging.yaml  opentelemetry-instrumentation-mysql.yaml  opentelemetry-instrumentation-mysqlclient.yaml  opentelemetry-instrumentation-pika.yaml  opentelemetry-instrumentation-psycopg.yaml  opentelemetry-instrumentation-psycopg2.yaml  opentelemetry-instrumentation-pymemcache.yaml  opentelemetry-instrumentation-pymongo.yaml  opentelemetry-instrumentation-pymssql.yaml  opentelemetry-instrumentation-pymysql.yaml  opentelemetry-instrumentation-pyramid.yaml  opentelemetry-instrumentation-redis.yaml  opentelemetry-instrumentation-remoulade.yaml  (+11 more)
otelsink/: LICENSE.txt  README.md  pyproject.toml
otelsink/src/otelsink/: __init__.py  private.py
otelsink/tests/: __init__.py
oteltest/: Makefile  README.md  lint.sh  pyproject.toml
oteltest/example_scripts/: simple_loop.py
oteltest/scripts/: splunk_simple.py
oteltest/src/oteltest/: __about__.py  common.py  main.py  private.py
oteltest/tests/: telemetry_tests.py
oteltest/tests/fixtures/: telemetry.json
scripts/: create_gh_release.py  gh_release_template.md  prepare_release.py  splunk_packaging.py
splunk_otel/: __init__.py  defaults.py  distro.py  env.py  environment_variables.py  excludes.py  metrics.py  options.py  patches.py  propagators.py  symbols.py  tracing.py  types.py  util.py  version.py
splunk_otel/cmd/: bootstrap.py  trace.py
splunk_otel/exporter/: zipkin.py
splunk_otel/exporters/: jaeger.py
splunk_otel/profiling/: __init__.py  options.py  profile_pb2.py
splunk_otel/site/: sitecustomize.py
src/splunk_otel/: __about__.py  __init__.py  config_provider.py  configurator.py  distro.py  effective_config.py  env.py  profile.py  profile_pb2.py  propagator.py  symbols.py  tracing.py  version.py
src/splunk_otel/callgraphs/: __init__.py  (+1 more)
tests/: ott_http.py  ott_init_otel.py  ott_lib.py  ott_logging.py  ott_profile.py  ott_propagator.py  ott_sf_token.py  ott_spec.py  ott_svcname_unset.py  ott_sysmetrics.py  ott_sysmetrics_disabled.py  ott_sysmetrics_enabled.py  ott_trace_loop.py  splunk_otel_test.py  test_aggregate_yamls.py  test_ai_metadata_cloud.py  test_ai_metadata_generator.py  test_ai_metadata_local.py  test_ai_metadata_offline.py  test_ai_metadata_online.py  test_basic.py  test_callgraphs_init.py  test_callgraphs_span_processor.py  test_callgraphs_state.py  test_config_provider.py  test_config_registry.py  test_distro.py  test_effective_config.py  test_env.py  test_exporter.py  test_exporters_jaeger.py  test_generate_metadata.py  test_init.py  test_opamp.py  test_options.py  test_otel_defaults.py  test_profile.py  test_profiling_state.py  test_propagation.py  test_propagator.py
tests/fixtures/: pb_profile.out.json  stacktraces.in.json  thread_states.in.json
tests/integration/: collector.yml  conftest.py  dbapi_cursor_iter.py  docker-compose.yml  flask_snapshot_profile.py  init_otel.py  lib.py  otel_http.py  otel_logging.py  otel_profile.py  propagator.py  secureapp_extra.py  sf_token.py  spec.py  svcname_unset.py  sysmetrics_disabled.py  sysmetrics_enabled.py  test_simple.py  trace_loop.py
tests/oteltest/: lib.py  trace_loop_grpc.py  trace_loop_http.py
tests/smoke/: smoke-test-docker-image.sh  smoke-test-package.sh  smoke-test-secureapp-direct-ingest.sh
tests/unit/: test_distro.py  test_exporters_jaeger.py  test_metrics.py  test_options.py  test_otel_defaults.py  test_profiling.py  test_propagation.py  test_tracing.py
tools/: generate_metadata.py
zc/: sitecustomize.py
(+8 files in other folders)
