[tool.poetry]
name = "splunk-opentelemetry"
version = "1.16.0"
description = "The Splunk distribution of OpenTelemetry Python Instrumentation provides a Python agent that automatically instruments your Python application to capture and report distributed traces to SignalFx APM."
authors = ["Splunk <splunk-oss@splunk.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "splunk_otel" },
    { include = "splunk_otel/**/*.py" },
]
include = [
    'CHANGELOG.md',
    'README.md',
    'LICENSE'
]

[tool.poetry.scripts]
splunk-py-trace = 'splunk_otel.cmd.trace:run'
splunk-py-trace-bootstrap = 'splunk_otel.cmd.bootstrap:run'
# deprecated commands
splk-py-trace = 'splunk_otel.cmd.trace:run_deprecated'
splk-py-trace-bootstrap = 'splunk_otel.cmd.bootstrap:run_deprecated'

[tool.poetry.plugins."opentelemetry_distro"]
splunk_distro = "splunk_otel.distro:_SplunkDistro"

[tool.poetry.dependencies]
cryptography=">=2.0,<=41.0.7"
python = "^3.7.2"
protobuf = "^4.23"
opentelemetry-api = "1.21.0"
opentelemetry-sdk = "1.21.0"
opentelemetry-instrumentation = "0.42b0"
opentelemetry-instrumentation-system-metrics = "0.42b0"
opentelemetry-semantic-conventions = "0.42b0"
opentelemetry-propagator-b3 = "1.21.0" 
opentelemetry-exporter-jaeger-thrift = "1.21.0"
opentelemetry-exporter-otlp-proto-grpc = "1.21.0"

[tool.poetry.extras]
all = ["opentelemetry-propagator-b3", "opentelemetry-exporter-otlp-proto-grpc", "opentelemetry-exporter-jaeger-thrift"]
b3 = ["opentelemetry-propagator-b3"]
otlp = ["opentelemetry-exporter-otlp-proto-grpc"]
jaeger = ["opentelemetry-exporter-jaeger-thrift"]

[tool.poetry.dev-dependencies]
backoff = ">=2.1.2,<2.2.0"
flake8 = "~3.9"
mypy = "1.4.1"
black = {version = "23.3.0", python = ">=3.7.0"}
isort = {version = "5.11.5", python = ">=3.7.0"}
pytest = "7.4.3"
coverage = "7.2.7"
pytest-cov = "4.1.0"
pylint = "2.17.7"
pylintfileheader = "0.3.3"
pytest-docker = {version = "2.0.1", platform = "linux"}
requests-futures = "1.0.1"
githubrelease = "1.5.9"
keepachangelog = "1.0.0"
click = "8.1.7"
types-setuptools = "69.0.0.0"
urllib3 = "2.0.7"
wrapt = ">=1.15.0"

[tool.black]
line-length = 90
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.2"
addopts = "-ra"
testpaths = [
    "tests",
]
